# grf

./: CMakeLists.txt  Makefile  README  README.md  euc_kr.c  extract_all.c  grf.c  grf_magic  grfio.c  hash_tables.c  main.c  qt_win.ui  test.c  zlib.c
doc/: README  rat.txt
examples/: Makefile  compress_all.c  extract_all.c  make_new.c
grfbuilder/: MainWindow.cpp  MainWindow.h  MainWindow.ui  grfbuilder.ts  grfbuilder_fr.ts  main.cpp  qt_win.cpp  qt_win.h  qt_win.sed  qt_win.ui
grfbuilder/locales/: convert.php  grfbuilder_de.ts  grfbuilder_empty.ts  grfbuilder_es.ts  grfbuilder_fr.ts  grfbuilder_zh_CN.ts  grfbuilder_zh_TW.ts  grfbuilder_zh_TW.xml
includes/: grf.h  hash_tables.h  libgrf.h
src/: euc_kr.c  grf.c  hash_tables.c  test.c  unicode_table_uhc.h
